Fix: visibile stuff

--- a/client/src/app/components/play-page-right-side-view/play-page-right-side-view.component.scss
+++ b/client/src/app/components/play-page-right-side-view/play-page-right-side-view.component.scss
@@ -54,6 +54,6 @@
         }
     }
     #chat-container {
-        height: 300px;
+        height: 100%;
     }
 }
